# rust_tcx

./: Cargo.toml  README.md
src/: lib.rs  reader.rs  tcx.rs
tests/: 20210119_run_garmin_fenix6.tcx  20210308_virtual_ride_with_power.tcx  20210323_yoga.tcx
